--- a/styles.css
+++ b/styles.css
@@ -309,6 +309,7 @@ nav {
 .button-education-experience:hover {
     background-color: #37403d;
     color: black;
+    padding: 10px;
     box-shadow: 1px 1px 2px 3px #ffdd00;
 }
 
